# AlphaDeepChess-tfg

./: CMakeLists.txt  README.md
src/: main.cpp  uci.cpp  uci.hpp
src/board/: board.cpp  board.hpp  move.hpp  square.hpp  types.hpp
src/moveGenerator/: moveGenerator.cpp  moveGenerator.hpp  precomputedAttacks.hpp  precomputedData.hpp
